--- a/deploy-all.yml
+++ b/deploy-all.yml
@@ -13,5 +13,7 @@
 - import_playbook: deploy-spark.yml
 - import_playbook: deploy-hbase.yml
 - import_playbook: deploy-knox.yml
+- import_playbook: deploy-hue.yml
 - import_playbook: deploy-users.yml
 - import_playbook: deploy-service-start-on-boot-policies.yml
+- import_playbook: test-cluster-deployment.yml
