hue: add hue_user variable

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -332,3 +332,6 @@ user_hive_policies:
           - { isAllowed: true, type: Write }
           - { isAllowed: true, type: Refresh }
         conditions: []
+
+# hue
+hue_user: hue
