--- a/deploy-all.yml
+++ b/deploy-all.yml
@@ -15,4 +15,5 @@
 - import_playbook: deploy-hbase.yml
 - import_playbook: deploy-knox.yml
 - import_playbook: deploy-users.yml
+- import_playbook: deploy-kafka.yml
 - import_playbook: deploy-service-start-on-boot-policies.yml
