--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ pythonenv/
 files/
 test.yml
 .vscode/
-ansible_roles/collections/ansible_collections/tosit/
+ansible_roles/collections/ansible_collections/
 RemoveTDP.yml
 inventory/hosts
 inventory/tdp_vars
 Vagrantfile
+venv/
+.env
+db_data/
