rework: migrate to tdp-lib usage

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,6 +8,9 @@ remote_user = vagrant
 roles_path = ansible_roles/roles
 hash_behaviour = merge
 stdout_callback = yaml
+pipelining = True
+verbosity = 0
+force_color = True
 
 [privilege_escalation]
 become=True
