--- a/deploy-users.yml
+++ b/deploy-users.yml
@@ -35,25 +35,25 @@
       with_items:
         - "{{ user_hdfs_policies }}"
 
-- name: Create Hive access policies in Ranger
-  hosts: ranger_admin[0]
-  become: yes
-  tasks:
-    - include_role:
-        name: ansible_roles/collections/ansible_collections/tosit/tdp_extra/roles/ansible-tdp-common-actions
-        tasks_from: deploy-ranger-hive-policy
-      with_items:
-        - "{{ user_hive_policies }}"
+# - name: Create Hive access policies in Ranger
+#   hosts: ranger_admin[0]
+#   become: yes
+#   tasks:
+#     - include_role:
+#         name: ansible_roles/collections/ansible_collections/tosit/tdp_extra/roles/ansible-tdp-common-actions
+#         tasks_from: deploy-ranger-hive-policy
+#       with_items:
+#         - "{{ user_hive_policies }}"
 
-- name: Create HBase access policies in Ranger
-  hosts: ranger_admin[0]
-  become: yes
-  tasks:
-    - include_role:
-        name: ansible_roles/collections/ansible_collections/tosit/tdp_extra/roles/ansible-tdp-common-actions
-        tasks_from: deploy-ranger-hbase-policy
-      with_items:
-        - "{{ user_hbase_policies }}"
+# - name: Create HBase access policies in Ranger
+#   hosts: ranger_admin[0]
+#   become: yes
+#   tasks:
+#     - include_role:
+#         name: ansible_roles/collections/ansible_collections/tosit/tdp_extra/roles/ansible-tdp-common-actions
+#         tasks_from: deploy-ranger-hbase-policy
+#       with_items:
+#         - "{{ user_hbase_policies }}"
 
 - hosts: edge-01
   tasks:
