--- a/tdp_vars_overrides/hive/hive.yml
+++ b/tdp_vars_overrides/hive/hive.yml
@@ -14,3 +14,8 @@ hivemetastore_start_on_boot: yes
 
 hiveserver2_restart: always
 hivemetastore_restart: always
+
+hive_site:
+  hive.security.authorization.sqlstd.confwhitelist.append: "{{ 'mapred.job.name' }}|{{ 'mapred.queue.name' }}|{{ 'airflow.ctx.*' }}"
+  # hive.security.authorization.sqlstd.confwhitelist.append: mapred.queue.name, airflow.ctx.*
+  # hive.security.authorization.sqlstd.confwhitelist: "{{ hive_site['hive.security.authorization.sqlstd.confwhitelist'] | default('') }}|mapred.queue.name|airflow.ctx.*"
